# fRegGAN

./: .dockerignore  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
cmrai/: eval.py  train.py
cmrai/data/: prepare_brats.py  process_brats.py  splitdata_brats.py
cmrai/datamodules/: brats2021_datamodule.py
cmrai/models/: cycle_reg_gan_module.py  my_model_utils.py  reg_gan_module.py
cmrai/tasks/: eval_task.py  train_task.py
cmrai/utils/: __init__.py  my_callbacks.py  my_loggers.py  my_metric.py  my_resolver.py  rich_utils.py  utils.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  log_fakeReg_a.yaml  log_fakeReg_b.yaml  log_fake_a.yaml  log_fake_b.yaml  many_loggers.yaml  metric_to_wandb.yaml  model_checkpoint.yaml  save_nii_image.yaml  upload_to_GCS.yaml  wandb.yaml
configs/datamodule/: brats2021.yaml  brats2021_unpaired.yaml
configs/debug/: default.yaml  limit_batches.yaml
configs/experiment/: paper_01_cycle_gan_00.yaml  paper_01_cycle_gan_01.yaml  paper_01_cycle_gan_02.yaml  paper_01_cycle_gan_03.yaml  paper_01_gan_00.yaml  paper_01_gan_01.yaml  paper_01_gan_02.yaml  paper_02_cycle_gan_00.yaml  paper_02_cycle_gan_00_a.yaml  paper_02_cycle_gan_01.yaml  paper_02_cycle_gan_01_a.yaml  paper_02_cycle_gan_02.yaml  paper_02_cycle_gan_02_a.yaml  paper_02_gan_00.yaml  paper_02_gan_00_a.yaml  paper_02_gan_01.yaml  paper_02_gan_01_a.yaml  paper_02_gan_02.yaml  paper_02_gan_02_a.yaml
configs/experiment_eval/: 01_cycle_gan_00.yaml  paper_01_cycle_gan_00.yaml  paper_01_cycle_gan_01.yaml  paper_01_cycle_gan_02.yaml  paper_01_cycle_gan_03.yaml  paper_01_gan_00.yaml  paper_01_gan_01.yaml  paper_01_gan_02.yaml  paper_02_cycle_gan_00.yaml  paper_02_cycle_gan_00_a.yaml  paper_02_cycle_gan_01.yaml  paper_02_cycle_gan_01_a.yaml  paper_02_cycle_gan_02.yaml  paper_02_cycle_gan_02_a.yaml  paper_02_gan_00.yaml  paper_02_gan_00_a.yaml  paper_02_gan_01.yaml  paper_02_gan_01_a.yaml  (+2 more)
docker-pytorch/: Dockerfile  environment.yml
(+12 files in other folders)
